// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     totalling 
    $1,140.00
  </p>
</div>
`;

exports[`should render ExpensesSummary with single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     totalling 
    $1,095.00
  </p>
</div>
`;
